--- a/org.toxsoft.skf.refbooks.gui/src/org/toxsoft/skf/refbooks/gui/km5/messages.properties
+++ b/org.toxsoft.skf.refbooks.gui/src/org/toxsoft/skf/refbooks/gui/km5/messages.properties
@@ -1,2 +1,12 @@
+AUTHOR_STR=Author: 
+DATE_STR=printed: 
+FMT_ERR_ITEM_ALREADY_EXISTS=Element with id %s already exist
+PRINT_REFBOOK_TITLE_FORMAT=Refbook: %s
+STR_ACT_PRINT_REFBOOK=Print refbook content
+STR_ACT_PRINT_REFBOOK_D=Print refbook content
+STR_D_REFBOOK_ID=Refbook id
+STR_D_REFBOOK_NAME=Name of refbook
+STR_N_REFBOOK_ID=Refbook id
+STR_N_REFBOOK_NAME=Name
 STR_REFBOOK   = Refbook
 STR_REFBOOK_D = A refbook is concept of a subject area that has a small, observable number of values (refbook elements)
