--- a/org.toxsoft.skf.refbooks.gui/src/org/toxsoft/skf/refbooks/gui/km5/messages_ka_GE.properties
+++ b/org.toxsoft.skf.refbooks.gui/src/org/toxsoft/skf/refbooks/gui/km5/messages_ka_GE.properties
@@ -1,2 +1,12 @@
-STR_REFBOOK   = ცნობარი
-STR_REFBOOK_D = ცნობარი არის საგნის არეალის კონცეფცია, რომელსაც აქვს მნიშვნელობების მცირე, ხელმისაწვდომი რაოდენობა (ცნობარის ელემენტები)
+AUTHOR_STR                  = ავტორი: 
+DATE_STR                    = დაბეჭდილი: 
+FMT_ERR_ITEM_ALREADY_EXISTS = დირექტორია ელემენტი ID: %s უკვე არსებობს
+PRINT_REFBOOK_TITLE_FORMAT  = დირექტორია: %s
+STR_ACT_PRINT_REFBOOK       = დაბეჭდეთ დირექტორიის შინაარსი
+STR_ACT_PRINT_REFBOOK_D     = დაბეჭდეთ დირექტორიის შინაარსი
+STR_D_REFBOOK_ID            = დირექტორია id
+STR_D_REFBOOK_NAME          = დირექტორიის სახელი
+STR_N_REFBOOK_ID            = დირექტორია id
+STR_N_REFBOOK_NAME          = სახელი
+STR_REFBOOK                 = ცნობარი
+STR_REFBOOK_D               = ცნობარი არის საგნის არეალის კონცეფცია, რომელსაც აქვს მნიშვნელობების მცირე, ხელმისაწვდომი რაოდენობა (ცნობარის ელემენტები)
