--- a/org.toxsoft.skf.refbooks.gui/src/org/toxsoft/skf/refbooks/gui/km5/messages_ru_RU.properties
+++ b/org.toxsoft.skf.refbooks.gui/src/org/toxsoft/skf/refbooks/gui/km5/messages_ru_RU.properties
@@ -1,2 +1,12 @@
-STR_REFBOOK   = Справочник
-STR_REFBOOK_D = Справочник - одно понятие предметной области имеющее небольшое, обозримое количество значений (элементов справочника)
+AUTHOR_STR                  = Автор: 
+DATE_STR                    = распечатано: 
+FMT_ERR_ITEM_ALREADY_EXISTS = Элемент справочника с id: %s уже существует
+PRINT_REFBOOK_TITLE_FORMAT  = Справочник: %s
+STR_ACT_PRINT_REFBOOK       = Распечатать содержимое справочника
+STR_ACT_PRINT_REFBOOK_D     = Распечатать справочник
+STR_D_REFBOOK_ID            = id справочника 
+STR_D_REFBOOK_NAME          = Название справочника
+STR_N_REFBOOK_ID            = id справочника
+STR_N_REFBOOK_NAME          = Название
+STR_REFBOOK                 = Справочник
+STR_REFBOOK_D               = Справочник - одно понятие предметной области имеющее небольшое, обозримое количество значений (элементов справочника)
