--- a/org.toxsoft.skf.refbooks.gui/todo.txt
+++ b/org.toxsoft.skf.refbooks.gui/todo.txt
@@ -1,9 +1,9 @@
 TODO list
 + печать справочника, перенести из USkat 3
++ функционал справочников в АРМе
 - проверить на создание/удаление/изменение структуры
 - отработать внешнее изменение структуры справочника
 - отработать внешнее изменение содержание справочника
-- функционал справочников в АРМе
 - картинки для справочника
 - локализация кодов
 - ?
