--- a/org.toxsoft.skf.refbooks.gui/src/org/toxsoft/skf/refbooks/gui/glib/messages.properties
+++ b/org.toxsoft.skf.refbooks.gui/src/org/toxsoft/skf/refbooks/gui/glib/messages.properties
@@ -1,3 +1,5 @@
-FMT_ERR_NO_REFBOOK_BY_ID=Can't find refbook by id: %s
-STR_N_REFBOOK_CONTENT=Content
-STR_N_REFBOOK_STRUCT=Structure
+FMT_ERR_NO_REFBOOK_BY_ID = Can't find refbook by id: %s
+STR_REFBOOK_CONTENT      = Content
+STR_REFBOOK_CONTENT_D    = View and edit refbook items
+STR_REFBOOK_STRUCT       = Structure
+STR_REFBOOK_STRUCT_D     = Refbook structure editor defines the additional properties (fields) of the items
