--- a/org.toxsoft.skf.refbooks.gui/src/org/toxsoft/skf/refbooks/gui/glib/messages_ka_GE.properties
+++ b/org.toxsoft.skf.refbooks.gui/src/org/toxsoft/skf/refbooks/gui/glib/messages_ka_GE.properties
@@ -1,3 +1,5 @@
 FMT_ERR_NO_REFBOOK_BY_ID = დირექტორია ვერ მოიძებნა ID-ით: %s
-STR_N_REFBOOK_CONTENT    = შინაარსი
-STR_N_REFBOOK_STRUCT     = სტრუქტურა
+STR_REFBOOK_CONTENT      = შინაარსი
+STR_REFBOOK_CONTENT_D    = ცნობარის ელემენტების ნახვა და რედაქტირება
+STR_REFBOOK_STRUCT       = სტრუქტურა
+STR_REFBOOK_STRUCT_D     = ცნობარის სტრუქტურის რედაქტორი განსაზღვრავს ელემენტების დამატებით თვისებებს (ველებს)
