--- a/org.toxsoft.skf.refbooks.gui/src/org/toxsoft/skf/refbooks/gui/glib/messages_ru_RU.properties
+++ b/org.toxsoft.skf.refbooks.gui/src/org/toxsoft/skf/refbooks/gui/glib/messages_ru_RU.properties
@@ -1,3 +1,5 @@
 FMT_ERR_NO_REFBOOK_BY_ID = Не найден справочник с id: %s
-STR_N_REFBOOK_CONTENT    = Content
-STR_N_REFBOOK_STRUCT     = Structure
+STR_REFBOOK_CONTENT      = Content
+STR_REFBOOK_CONTENT_D    = Просмотр и редактирование элементов справочника
+STR_REFBOOK_STRUCT       = Structure
+STR_REFBOOK_STRUCT_D     = Редактор структуры справчника определяет дополнительные свойства (поля) элементов
