Sysdescr, Objects, Refbooks code generation done

--- a/org.toxsoft.skf.refbooks.skide/src/org/toxsoft/skf/refbooks/skide/messages_ka_GE.properties
+++ b/org.toxsoft.skf.refbooks.skide/src/org/toxsoft/skf/refbooks/skide/messages_ka_GE.properties
@@ -1,4 +1,7 @@
-STR_SKIDE_PLUGIN_REFBOOKS   = ცნობარები
-STR_SKIDE_PLUGIN_REFBOOKS_D = ცნობარების და ცნობარების ელემენტების იმოხილვა და რედაქტირება
-STR_SKIDE_REFBOOKS          = ცნობარები
-STR_SKIDE_REFBOOKS_D        = ცნობარების და ცნობარების ელემენტების იმოხილვა და რედაქტირება
+FMT_INFO_JAVA_INTERFACE_WAS_GENERATED  = Java ინტერფეისის '%s' Საწყისი კოდის ფაილი შეიქმნა და ჩაიწერა დისკზე\n
+STR_OPDEF_GW_REFBOOKS_INTERFACE_NAME   = ინტერფეისის სახელი
+STR_OPDEF_GW_REFBOOKS_INTERFACE_NAME_D = Java ინტერფეისის სახელი ცნობარების გენერირებული მუდმივების შესანახად
+STR_SKIDE_PLUGIN_REFBOOKS              = ცნობარები
+STR_SKIDE_PLUGIN_REFBOOKS_D            = ცნობარების და ცნობარების ელემენტების იმოხილვა და რედაქტირება
+STR_SKIDE_REFBOOKS                     = ცნობარები
+STR_SKIDE_REFBOOKS_D                   = ცნობარების და ცნობარების ელემენტების იმოხილვა და რედაქტირება
