--- a/org.toxsoft.skf.refbooks.skide/src/org/toxsoft/skf/refbooks/skide/messages.properties
+++ b/org.toxsoft.skf.refbooks.skide/src/org/toxsoft/skf/refbooks/skide/messages.properties
@@ -1,4 +1,7 @@
-STR_SKIDE_PLUGIN_REFBOOKS   = Refbooks
-STR_SKIDE_PLUGIN_REFBOOKS_D = View and edit refbooks and refbook items
-STR_SKIDE_REFBOOKS          = Refbooks
-STR_SKIDE_REFBOOKS_D        = View and edit refbooks and refbook items
+FMT_INFO_JAVA_INTERFACE_WAS_GENERATED  = Java interface '%s' source code file was created and written
+STR_OPDEF_GW_REFBOOKS_INTERFACE_NAME   = Interface name
+STR_OPDEF_GW_REFBOOKS_INTERFACE_NAME_D = Name of the Java interface to store generated constants of the refbooks
+STR_SKIDE_PLUGIN_REFBOOKS              = Refbooks
+STR_SKIDE_PLUGIN_REFBOOKS_D            = View and edit refbooks and refbook items
+STR_SKIDE_REFBOOKS                     = Refbooks
+STR_SKIDE_REFBOOKS_D                   = View and edit refbooks and refbook items
