--- a/org.toxsoft.skf.refbooks.skide/src/org/toxsoft/skf/refbooks/skide/messages_ru_RU.properties
+++ b/org.toxsoft.skf.refbooks.skide/src/org/toxsoft/skf/refbooks/skide/messages_ru_RU.properties
@@ -1,4 +1,7 @@
-STR_SKIDE_PLUGIN_REFBOOKS   = Справочники
-STR_SKIDE_PLUGIN_REFBOOKS_D = Просмотр и редактирование справочников и элементов справочников
-STR_SKIDE_REFBOOKS          = Справочники
-STR_SKIDE_REFBOOKS_D        = Просмотр и редактирование справочников и элементов справочников
+FMT_INFO_JAVA_INTERFACE_WAS_GENERATED  = Файл исходного кода интерфейса Java '%s' создан и записан
+STR_OPDEF_GW_REFBOOKS_INTERFACE_NAME   = Имя интерфейса
+STR_OPDEF_GW_REFBOOKS_INTERFACE_NAME_D = Имя интерфейса Java для хранения сгенерированных констант справочников
+STR_SKIDE_PLUGIN_REFBOOKS              = Справочники
+STR_SKIDE_PLUGIN_REFBOOKS_D            = Просмотр и редактирование справочников и элементов справочников
+STR_SKIDE_REFBOOKS                     = Справочники
+STR_SKIDE_REFBOOKS_D                   = Просмотр и редактирование справочников и элементов справочников
