Basic implementation of the refbooks upload

--- a/org.toxsoft.skf.refbooks.skide/src/org/toxsoft/skf/refbooks/skide/messages.properties
+++ b/org.toxsoft.skf.refbooks.skide/src/org/toxsoft/skf/refbooks/skide/messages.properties
@@ -1,4 +1,5 @@
 FMT_INFO_JAVA_INTERFACE_WAS_GENERATED  = Java interface '%s' source code file was created and written
+FMT_INFO_REFBOOKS_UPLOADED             = Uploaded %d refbooks and %d items to the server
 STR_OPDEF_GW_REFBOOKS_INTERFACE_NAME   = Interface name
 STR_OPDEF_GW_REFBOOKS_INTERFACE_NAME_D = Name of the Java interface to store generated constants of the refbooks
 STR_SKIDE_PLUGIN_REFBOOKS              = Refbooks
