--- a/org.toxsoft.skf.refbooks.skide/src/org/toxsoft/skf/refbooks/skide/messages_ka_GE.properties
+++ b/org.toxsoft.skf.refbooks.skide/src/org/toxsoft/skf/refbooks/skide/messages_ka_GE.properties
@@ -1,4 +1,5 @@
 FMT_INFO_JAVA_INTERFACE_WAS_GENERATED  = Java ინტერფეისის '%s' Საწყისი კოდის ფაილი შეიქმნა და ჩაიწერა დისკზე\n
+FMT_INFO_REFBOOKS_UPLOADED             = ატვირთულია %d ცნობარი და %d ელემენტი სერვერზე
 STR_OPDEF_GW_REFBOOKS_INTERFACE_NAME   = ინტერფეისის სახელი
 STR_OPDEF_GW_REFBOOKS_INTERFACE_NAME_D = Java ინტერფეისის სახელი ცნობარების გენერირებული მუდმივების შესანახად
 STR_SKIDE_PLUGIN_REFBOOKS              = ცნობარები
