--- a/org.toxsoft.skf.refbooks.skide/src/org/toxsoft/skf/refbooks/skide/messages_ru_RU.properties
+++ b/org.toxsoft.skf.refbooks.skide/src/org/toxsoft/skf/refbooks/skide/messages_ru_RU.properties
@@ -1,4 +1,5 @@
 FMT_INFO_JAVA_INTERFACE_WAS_GENERATED  = Файл исходного кода интерфейса Java '%s' создан и записан
+FMT_INFO_REFBOOKS_UPLOADED             = На сервер загружено %d справочников и %d элементов
 STR_OPDEF_GW_REFBOOKS_INTERFACE_NAME   = Имя интерфейса
 STR_OPDEF_GW_REFBOOKS_INTERFACE_NAME_D = Имя интерфейса Java для хранения сгенерированных констант справочников
 STR_SKIDE_PLUGIN_REFBOOKS              = Справочники
