--- a/org.toxsoft.skf.refbooks.lib/src/org/toxsoft/skf/refbooks/lib/impl/messages.properties
+++ b/org.toxsoft.skf.refbooks.lib/src/org/toxsoft/skf/refbooks/lib/impl/messages.properties
@@ -10,3 +10,5 @@ FMT_WARN_ITEM_NAME_ALREADY_EXISTS  = An element with the same name '%s' already 
 FMT_WARN_RB_NAME_ALREADY_EXISTS    = A refbook with the same name '%s' already exists
 STR_D_ATTR_ITEM_CLASS_ID           = Refbook element class identifier
 STR_N_ATTR_ITEM_CLASS_ID           = Element class
+STR_REFBOOK_CLASS                  = Refbook
+STR_REFBOOK_CLASS_D                = The refbook is collection of items with the same, refbook-specific structure
