--- a/org.toxsoft.skf.refbooks.lib/src/org/toxsoft/skf/refbooks/lib/messages.properties
+++ b/org.toxsoft.skf.refbooks.lib/src/org/toxsoft/skf/refbooks/lib/messages.properties
@@ -1,22 +1,29 @@
-STR_CHANGE_AUTHOR         = Author
-STR_CHANGE_AUTHOR_D       = The user (if applicable) who changed the refbook
-STR_CRUD_OP               = CRUD operation
-STR_CRUD_OP_D             = What happened with item: CREATE, CHANGE, REMOVE
-STR_ITEM_CLASS_ID         = Item class
-STR_ITEM_CLASS_ID_D       = Refbook item class ID
-STR_ITEM_SKID             = Item SKID
-STR_ITEM_SKID_D           = SKID of the affected item
-STR_NEW_ATTRS             = New attrs
-STR_NEW_ATTRS_D           = Values of refbook item attributes after change, or nothing if item just removed
-STR_NEW_LINKS             = New links
-STR_NEW_LINKS_D           = Values of refbook item links after change, or nothing if item just removed
-STR_NEW_RIVETS            = New rivets
-STR_NEW_RIVETS_D          = Values of refbook item rivets after change, or nothing if item just removed
-STR_OLD_ATTRS             = Old attrs
-STR_OLD_ATTRS_D           = Values of refbook item attributes before change, or nothing if item just created
-STR_OLD_LINKS             = Old links
-STR_OLD_LINKS_D           = Values of refbook item links before change, or nothing if item just created
-STR_OLD_RIVETS            = Old rivets
-STR_OLD_RIVETS_D          = Values of refbook item rivets before change, or nothing if item just created
-STR_REFBOOK_ITEM_CHANGE   = RB item
-STR_REFBOOK_ITEM_CHANGE_D = Refbook item changed
+STR_ABILITY_EDIT_REFBOOKS_VALUE_D  = User can edit values of refbooks
+STR_ABILITY_EDIT_REFBOOK_STRUCTS   = edit structure
+STR_ABILITY_EDIT_REFBOOK_STRUCTS_D = User can edit refbooks struct
+STR_ABILITY_EDIT_REFBOOK_VALUES    = editing
+STR_ABILITY_EDIT_REFBOOK_VALUES_D  = User can edit refbook values
+STR_ABKIND_REFBOOKS                = Refbooks editor
+STR_ABKIND_REFBOOKS_D              = User abilities to access to refbooks
+STR_CHANGE_AUTHOR                  = Author
+STR_CHANGE_AUTHOR_D                = The user (if applicable) who changed the refbook
+STR_CRUD_OP                        = CRUD operation
+STR_CRUD_OP_D                      = What happened with item: CREATE, CHANGE, REMOVE
+STR_ITEM_CLASS_ID                  = Item class
+STR_ITEM_CLASS_ID_D                = Refbook item class ID
+STR_ITEM_SKID                      = Item SKID
+STR_ITEM_SKID_D                    = SKID of the affected item
+STR_NEW_ATTRS                      = New attrs
+STR_NEW_ATTRS_D                    = Values of refbook item attributes after change, or nothing if item just removed
+STR_NEW_LINKS                      = New links
+STR_NEW_LINKS_D                    = Values of refbook item links after change, or nothing if item just removed
+STR_NEW_RIVETS                     = New rivets
+STR_NEW_RIVETS_D                   = Values of refbook item rivets after change, or nothing if item just removed
+STR_OLD_ATTRS                      = Old attrs
+STR_OLD_ATTRS_D                    = Values of refbook item attributes before change, or nothing if item just created
+STR_OLD_LINKS                      = Old links
+STR_OLD_LINKS_D                    = Values of refbook item links before change, or nothing if item just created
+STR_OLD_RIVETS                     = Old rivets
+STR_OLD_RIVETS_D                   = Values of refbook item rivets before change, or nothing if item just created
+STR_REFBOOK_ITEM_CHANGE            = RB item
+STR_REFBOOK_ITEM_CHANGE_D          = Refbook item changed
